# persona-nexus

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  management_urls.py  models.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_game_game_logo_post_cover_image_and_more.py  0003_post_slug.py  0004_userprofile_saved_posts.py  0005_conversation_message.py  0006_rename_conversation_message_conversation.py  0007_message_is_read.py  0008_notification.py  0009_postcategory_slug.py  0010_userprofile_following_categories_and_more.py  0011_userprofile_karma_and_more.py  0012_report.py
app/templatetags/: admin_tags.py  mention_tags.py
personanexus/: asgi.py  urls.py  wsgi.py
static/: input.css  output.css
templates/: base.html  base_guest.html  landing_page.html
templates/account/: email.html  login.html  password_change.html  settings.html  signup.html
templates/app/: categories.html  category_detail.html  conversation_detail.html  create_post.html  following.html  game_detail.html  games.html  home.html  inbox.html  notification_list.html  onboarding.html  post_confirm_delete.html  post_detail.html  post_update_form.html  profile_detail.html  search_results.html
templates/app/partials/: _chat_window.html  _comment.html  _comment_on_profile.html  _confirm_delete_modal.html  (+20 more)
templates/management/: analytics.html  base.html  category_list.html  dashboard.html  game_list.html  report_list.html  user_list.html
(+13 files in other folders)
